--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -76,7 +76,7 @@
       <div class="row bottom">
         <small>
           <div class="col-md-8 text-center col-md-offset-2">
-            <a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh">版权声明</a><br/><a href="https://github.com/zhongdian121">钟典是谁？</a>可以吃吗？
+            本作品采用<a rel="license" href="http://creativecommons.org/licenses/by-sa/3.0/deed.zh">知识共享署名-相同方式共享 3.0 未本地化版本许可协议</a>进行许可。<br/>Theme by <a href="https://github.com/codepiano/codepiano.github.com">[Codepiano]</a>
           </div>
         </small>
       </div>
